# compileprojects

./: CP_DATABASE.db  Procfile  README.md  commands.py  db_create.py  forms.py  initDB.py  main.py  models.py  pyproject.toml  requirements.txt
static/: bill_render.css  invoice_menu.css  invoice_render.css  mail.css  main.css  main.js  main_about_us.js  main_websites.js  main_websites_app.css
templates/: _formhelpers.html  bill_menu.html  bill_render.html  default.html  default_2.html  invoice_menu.html  invoice_render.html  mail_admin_send.html  mail_del.html  mail_email_change.html  mail_email_confirm.html  mail_email_confirm_send.html  mail_kyle.html  mail_kyle_prem.html  mail_layout.html  mail_name_change.html  mail_pass_change.html  mail_password_recovery_link.html  mail_prem.html  mail_prem_bill.html  mail_username_change.html  main.html  main_FAQ.html  main_about_us.html  main_any_prod.html  main_bill.html  main_cart.html  main_check_out.html  main_comming_soon.html  main_filters.html  main_invoice.html  main_legal_free_app.html  main_legal_purchasing.html  main_legal_refund.html  main_login.html  main_offline.html  main_order.html  main_password_recovery_send.html  main_password_reset.html  main_premium.html  (+15 more)
templates/admin/: index.html
