[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "extralab"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Flask-Cors = "^3.0"
Flask-JWT = "^0.3.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4"
python = "^3.8"
sqlalchemy = "^1.3"
flask-wtf = "^0.14.3"
wtforms = "^2.3.1"
Flask-WeasyPrint = "^0.6"
Flask-Reuploaded = "^0.3.2"
flask-uploads = "^0.2.1"
python-barcode = "^0.13.1"
flask-qr = "^0.1.3"
qrcode = "^6.1"
Flask-QRcode = "^3.0.0"
email-validator = "^1.1.1"
flask-admin = "^1.5.6"
flask-mail = "^0.9.1"
[tool.poetry.dev-dependencies]
